tests/macros/order_select/editor.stderr
error: option `editor` does not exist for kind `order_select`
 --> tests/macros/order_select/editor.rs:2:49
  |
2 |     let q = requestty::questions![OrderSelect { editor: todo!() }];
  |                                                 ^^^^^^
