tests/macros/order_select/editor.rs
fn main() {
    let q = requestty::questions![OrderSelect { editor: todo!() }];
}
